# access_contral_system

documents/: MIPI协议.md  开发手册.md  硬件选型.md  系统架构设计文档.md  需求分析.md
software_engineering/firmware/: CMakeLists.txt  partitions.csv
software_engineering/firmware/components/dal/: CMakeLists.txt
software_engineering/firmware/components/dal/dal_audio/: dal_audio.c  es8311.c
software_engineering/firmware/components/dal/dal_audio/include/: dal_audio.h  es8311.h
software_engineering/firmware/components/dal/dal_camera/: dal_camera.c  imx219.c
software_engineering/firmware/components/dal/dal_camera/include/: dal_camera.h  imx219.h
software_engineering/firmware/components/dal/dal_config/include/: dal_config.h
software_engineering/firmware/components/dal/dal_display/: attiny88.c  dal_display.c  tc358762.c
software_engineering/firmware/components/dal/dal_display/include/: attiny88.h  dal_display.h  tc358762.h
software_engineering/firmware/components/dal/dal_network/: dal_network.c
software_engineering/firmware/components/dal/dal_network/include/: dal_network.h
software_engineering/firmware/components/dal/dal_pir/: dal_pir.c
software_engineering/firmware/components/dal/dal_pir/include/: dal_pir.h
software_engineering/firmware/components/dal/dal_relay/: dal_relay.c
software_engineering/firmware/components/dal/dal_relay/include/: dal_relay.h
software_engineering/firmware/components/dal/dal_storage/: dal_storage.c
software_engineering/firmware/components/dal/dal_storage/include/: dal_storage.h
software_engineering/firmware/components/dal/dal_touch/: dal_touch.c  ft5406.c
software_engineering/firmware/components/dal/dal_touch/include/: dal_touch.h  ft5406.h
software_engineering/firmware/components/pal/: CMakeLists.txt
software_engineering/firmware/components/pal/pal_i2c/: pal_i2c.c
software_engineering/firmware/components/pal/pal_i2c/include/: pal_i2c.h
software_engineering/firmware/components/pal/pal_mipi_csi/: pal_mipi_csi.c
software_engineering/firmware/components/pal/pal_mipi_csi/include/: pal_mipi_csi.h
software_engineering/firmware/components/pal/pal_mipi_dsi/: pal_mipi_dsi.c
software_engineering/firmware/components/service/: CMakeLists.txt  service.c
software_engineering/firmware/components/service/include/: service_event.h
software_engineering/firmware/components/service/service_camera/: service_camera.c
software_engineering/firmware/components/service/service_camera/include/: service_camera.h
software_engineering/firmware/components/service/service_db/: service_db.c  service_db_face.c  service_db_file_io.c  service_db_index.c  service_db_internal.h  service_db_log.c  service_db_user.c
software_engineering/firmware/components/service/service_db/include/: service_db.h
software_engineering/firmware/components/service/service_face_detect/: service_face_detect.cpp
software_engineering/firmware/components/service/service_face_detect/include/: service_face_detect.h
software_engineering/firmware/components/service/service_face_identify/: service_face_identify.cpp
software_engineering/firmware/components/service/service_face_identify/include/: service_face_identify.h
software_engineering/firmware/components/service/service_log/: service_log.c
software_engineering/firmware/components/service/service_log/include/: service_log.h
software_engineering/firmware/components/service/service_mqtt/: service_mqtt.c  service_mqtt_internal.h
software_engineering/firmware/components/service/service_mqtt/include/: service_mqtt.h
software_engineering/firmware/components/service/service_system_guard/: service_system_guard.c
software_engineering/firmware/components/service/service_system_guard/include/: service_system_guard.h
software_engineering/firmware/components/service/service_touch/: service_touch.c
software_engineering/firmware/components/service/service_touch/include/: service_touch.h
software_engineering/firmware/components/service/service_ui/: service_ui.c
software_engineering/firmware/components/service/service_ui/include/: service_ui.h
software_engineering/firmware/components/service/service_user_manage/: service_user_manage.c
software_engineering/firmware/components/service/service_user_manage/include/: service_user_manage.h
software_engineering/firmware/main/: CMakeLists.txt  idf_component.yml  main.c
software_engineering/firmware/tests/: CMakeLists.txt  fff_globals.c  test_dal_pir.c  test_dal_relay.c  test_pal_gpio.c  test_service_db.c  test_service_face_detect.cpp  test_service_face_identify.cpp  test_service_frame_crop.c  test_service_mqtt.c  test_service_user_manage.c
software_engineering/firmware/tests/mocks/: esp_intr_alloc.h  esp_log.h  esp_tls.h  fff_globals.h  mqtt_client.h  pal_log.h
software_engineering/firmware/tests/mocks/driver/: gpio.h
